--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/View/YQFalsePositive.xib
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/View/YQFalsePositive.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -31,14 +31,8 @@
                     <color key="textColor" white="0.48999999999999999" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="原因" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pkp-rJ-HWx">
-                    <rect key="frame" x="59" y="135" width="41" height="24"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yOz-Bd-JxC">
-                    <rect key="frame" x="20" y="184" width="80" height="30"/>
+                    <rect key="frame" x="20" y="185" width="80" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="80" id="1Lf-uU-8uP"/>
                         <constraint firstAttribute="height" constant="30" id="Ox0-T4-qpZ"/>
@@ -48,7 +42,7 @@
                     </state>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="weP-KY-KeG" customClass="SJAddView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                    <rect key="frame" x="10" y="224" width="355" height="100"/>
+                    <rect key="frame" x="10" y="225" width="355" height="100"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="bCs-Lo-VTx"/>
@@ -67,7 +61,7 @@
                     </userDefinedRuntimeAttributes>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LYL-nJ-cgt">
-                    <rect key="frame" x="110" y="132.5" width="260" height="30"/>
+                    <rect key="frame" x="105" y="125" width="265" height="30"/>
                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -85,7 +79,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pqq-hg-rSA">
-                    <rect key="frame" x="103" y="354" width="170" height="50"/>
+                    <rect key="frame" x="103" y="355" width="170" height="50"/>
                     <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="NcW-4o-gdo"/>
@@ -99,14 +93,23 @@
                         <action selector="saveButtonClick:" destination="7cQ-dS-IB8" eventType="touchUpInside" id="MxZ-3c-n9A"/>
                     </connections>
                 </button>
+                <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LC0-pG-heJ">
+                    <rect key="frame" x="35" y="125" width="65" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="65" id="4Yg-XI-38L"/>
+                        <constraint firstAttribute="height" constant="30" id="Sjp-g3-2M1"/>
+                    </constraints>
+                    <state key="normal" title="原因" image="sign_required">
+                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="yOz-Bd-JxC" firstAttribute="trailing" secondItem="Pkp-rJ-HWx" secondAttribute="trailing" id="0yb-T8-fUI"/>
+                <constraint firstItem="yOz-Bd-JxC" firstAttribute="top" secondItem="LC0-pG-heJ" secondAttribute="bottom" constant="30" id="1Vn-ZY-hTF"/>
                 <constraint firstItem="w6h-lN-nfc" firstAttribute="leading" secondItem="EIF-9M-zfZ" secondAttribute="trailing" constant="10" id="1yj-uf-svG"/>
                 <constraint firstItem="pqq-hg-rSA" firstAttribute="centerX" secondItem="7cQ-dS-IB8" secondAttribute="centerX" id="70p-Q1-pI1"/>
-                <constraint firstItem="yOz-Bd-JxC" firstAttribute="top" secondItem="Pkp-rJ-HWx" secondAttribute="bottom" constant="25" id="BwQ-Em-uCg"/>
-                <constraint firstItem="Pkp-rJ-HWx" firstAttribute="trailing" secondItem="EIF-9M-zfZ" secondAttribute="trailing" id="Eaf-j9-IKC"/>
+                <constraint firstItem="LYL-nJ-cgt" firstAttribute="centerY" secondItem="LC0-pG-heJ" secondAttribute="centerY" id="75F-hD-4j4"/>
                 <constraint firstItem="EIF-9M-zfZ" firstAttribute="centerX" secondItem="7cQ-dS-IB8" secondAttribute="centerX" constant="-120" id="GHW-va-zPn"/>
                 <constraint firstItem="pqq-hg-rSA" firstAttribute="top" secondItem="weP-KY-KeG" secondAttribute="bottom" constant="30" id="KX2-ey-oQG"/>
                 <constraint firstItem="EIF-9M-zfZ" firstAttribute="top" secondItem="7cQ-dS-IB8" secondAttribute="top" constant="65" id="Pcf-gk-C9a"/>
@@ -116,10 +119,11 @@
                 <constraint firstItem="NMs-Ff-9kQ" firstAttribute="leading" secondItem="w6h-lN-nfc" secondAttribute="trailing" constant="5" id="gtH-jK-Jwn"/>
                 <constraint firstItem="mzg-GI-nQC" firstAttribute="centerX" secondItem="7cQ-dS-IB8" secondAttribute="centerX" id="h9t-87-FZj"/>
                 <constraint firstItem="weP-KY-KeG" firstAttribute="leading" secondItem="7cQ-dS-IB8" secondAttribute="leading" constant="10" id="ioG-2c-8in"/>
+                <constraint firstItem="LYL-nJ-cgt" firstAttribute="leading" secondItem="LC0-pG-heJ" secondAttribute="trailing" constant="5" id="jpo-cC-iC2"/>
                 <constraint firstAttribute="trailing" secondItem="LYL-nJ-cgt" secondAttribute="trailing" constant="5" id="kJ5-Mt-WGW"/>
-                <constraint firstItem="Pkp-rJ-HWx" firstAttribute="top" secondItem="EIF-9M-zfZ" secondAttribute="bottom" constant="40" id="nc2-Lz-z8Y"/>
-                <constraint firstItem="LYL-nJ-cgt" firstAttribute="centerY" secondItem="Pkp-rJ-HWx" secondAttribute="centerY" id="ubd-Jv-eQk"/>
-                <constraint firstItem="LYL-nJ-cgt" firstAttribute="leading" secondItem="Pkp-rJ-HWx" secondAttribute="trailing" constant="10" id="vRJ-6C-K35"/>
+                <constraint firstItem="LC0-pG-heJ" firstAttribute="trailing" secondItem="EIF-9M-zfZ" secondAttribute="trailing" id="o8b-0D-JQs"/>
+                <constraint firstItem="yOz-Bd-JxC" firstAttribute="leading" secondItem="7cQ-dS-IB8" secondAttribute="leading" constant="20" id="tWA-M3-H6U"/>
+                <constraint firstItem="LC0-pG-heJ" firstAttribute="top" secondItem="EIF-9M-zfZ" secondAttribute="bottom" constant="30" id="y3h-Cw-vAT"/>
                 <constraint firstItem="weP-KY-KeG" firstAttribute="top" secondItem="yOz-Bd-JxC" secondAttribute="bottom" constant="10" id="yJR-Om-Ktw"/>
                 <constraint firstItem="mzg-GI-nQC" firstAttribute="top" secondItem="7cQ-dS-IB8" secondAttribute="top" constant="20" id="ynj-pk-aVD"/>
             </constraints>
